# quantum-simulator

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs  test.rs
src/algorithms/: grover.rs  mod.rs
src/compiler/: optimizer.rs
src/math/: complex.rs
src/rank-decomp/: simulator.rs
src/runtime/: controller.rs  gpu.rs  rank_decomposition.rs
src/statevector/: gates.rs  simulator.rs  utils.rs
src/tableau/: gates.rs  mod.rs  simulator.rs  utils.rs
tests/: compiler_tests.rs  statevector_tests.rs  tableau_tests.rs
